--- a/styles/_login.scss
+++ b/styles/_login.scss
@@ -1,5 +1,5 @@
 @media (max-width: 767px) {
-  body {
+  .body {
     background-image: url('../public/fondo.png');
     background-size: cover;
     background-position: center;
