--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -36,22 +36,27 @@
 
       .mood-btn{
         width: 100%;
+        height: 3.8vh;
         padding: 5px 11px 5px 11px;
+        border-radius: 50px;
         position: relative;
         display: flex;
+        background: #e2e2e2;
         align-items: center;
         justify-content: space-between;
 
         .circle2{
           position: absolute;
           background: #4487B2;
-          width: 24%;
+          transform: translate(0) scale(0.9);
+          top: 18%;
+          transition-timing-function: linear;
+          width: 25%;
           left: 50px;
-          height: 2.5vh;
+          height: 2.6vh;
           border-radius: 50px;
         }
       }
-
     }
   }
 }
