--- a/styles/_dashboard.scss
+++ b/styles/_dashboard.scss
@@ -179,7 +179,7 @@
 
   @keyframes glowing-pulse {
     0% {
-      box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.7);
+      box-shadow: 0 0 0 0 var(--light-pulse-color);
     }
   
     70% {
